Resolves: fdo#68275 Grayscale TIFF is imported as white

this reverts 6c719c1585eb1a2dbab86cc73ff871da41765981 "n#615223 local nbyte1
should have been class-level nByte1" which was to fix the use seen
in valgrind og the uninitialized nByte1

So additionally remove the use of the uninit nByte1 entirely

Change-Id: I5b3f4fa00d74e545f207a11a5e90935f14a23a8e